# programming-error-pattern-recognition

./: .gitignore  LICENSE  README.md  proposal.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  deep_model.yaml
data/: README.md
data/raw/: sample.csv
models/: README.md
notebooks/: 01_exploratory_analysis.ipynb
reports/: final_report.md
scripts/: evaluate.py  predict.py  train_baseline.py  train_transformer.py
src/error_pattern_recognition/: __init__.py  config.py  constants.py
src/error_pattern_recognition/data/: loader.py  schema.py  splitter.py
src/error_pattern_recognition/evaluation/: evaluate.py  metrics.py
src/error_pattern_recognition/features/: tfidf.py
src/error_pattern_recognition/inference/: __init__.py  predictor.py
src/error_pattern_recognition/models/: base.py  baseline_svm.py  transformer_classifier.py
src/error_pattern_recognition/preprocessing/: __init__.py  code_cleaner.py  pipeline.py  tokenizer.py
src/error_pattern_recognition/training/: __init__.py  train_baseline.py  train_transformer.py
src/error_pattern_recognition/utils/: io.py  logging.py
tests/: test_loader.py  test_predictor.py  test_preprocessing.py
